--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-torch>=1.9.0
-torchvision>=0.10.0
-torchaudio>=0.9.0
+gradio
+PIL
+pathlib
+transformers
+torch
+subprocess
+matplotlib
+argparse
+dataclasses
+typing 
+json
+sentencepiece 
+tqdm  
+litgpt
+gym 
 numpy
 pandas
-matplotlib
-transformers
-litgpt 
